# Customers-Clustering

./: README.md  pyproject.toml
IUM21Z_Zad_05_03/features/: build_features.py
IUM21Z_Zad_05_03/models/: predict_model.py  train_model.py
RFM_model/data/: make_dataset.py
RFM_model/features/: build_features.py
RFM_model/models/: predict_model.py  train_model.py
data/processed/: deliveries.jsonl
data/processed/test/: last_month.csv  processed.csv
data/processed/train/: last_month.csv  processed.csv
data/raw/: deliveries.jsonl  users.jsonl
data/raw/old_data_with_mistakes/: products.jsonl  users.jsonl
logs/: logger.py
microservice/: main.ipynb  main.py  test.py
models/: my_model.pkl  simple_model.pkl
notebooks/: ETAP 1.ipynb  preprocs.ipynb
notebooks/etap1 - poprawa/: ETAP 1.ipynb  preprocs.ipynb
notebooks/etap2/: etap2.ipynb
reports/: assumptions.md  zadanie.md
tests/: test_build_features.py  test_criterium.py  test_make_dataset.py  test_predict_model.py  test_train_model.py
tests/test_RFM/: test_predict.py
